# ABCT-toolkit

./: .gitignore  README.md  build.py  lit  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
abctk/: __init__.py  __main__.py  check_comp_feat.py  cli.py  cli_tool.py  config.py  conv.py  dic.py  gen_comp.py  obfuscate.py  to_viewer.py  version.py
abctk/ccg2lambda/: category.py  ccg2lambda_tools.py  ccg2mathml.py  check_wff.py  convert_formulas.py  convert_nltk.py  drs2clf.py  drs_mathml.py  get_surface.py  knowledge.py  latextool.py  nltk2coq.py  nltk2drs.py  nltk2normal.py  nltk2tptp.py  normalization.py  print_latex.py  semantic_index.py  semantics_comparatives_event.yaml  semantics_comparatives_hol.yaml  semantics_comparatives_hol_init.yaml  semparse.py  semtag.yaml  visualization_tools.py  visualization_vertical_tools.py  visualize.py
abctk/cli_typer/: __init__.py  ccg2lambda.py  comp.py  conv.py  crypt.py  elim_empty.py  gen_comp.py  norm.py  renumber.py  to_jigg.py  tweak.py
abctk/conversion/: cli.py  core.py
abctk/io/: depccg_parse_output.py  nltk_tree.py
abctk/ml/: cli.py  core.py  gen.py  misc.py
abctk/parsing/: cli.py  core.py  tokenizer.py
abctk/transform_ABC/: binconj.py  cli.py  core.py  elim_empty.py  elim_trace.py  incorporate_comp.py  jigg.py  morph_janome.py  norm.py  unary.py
abctk/transform_Keyaki/: cli.py  core.py  corpus_readers.py  obfuscate.py
abctk/types/: ABCCat.py  ABCCatPlus.py  __init__.py  core.py  jigg.py  real.py  treebank.py  trees.py
ext_scripts/: dependency-post.tsgn.md  dependency.tsgn.md  elim.tsgn  generate-template.rb  move-comparative.tsgn  move.lisp  move0.tsgn  pretreatments.tsgn.md  simplify-tag.sed  unsimplify-ABC-tags.rb
ext_scripts/decrypt/: extract_data  integrate_BCCWJ_characters  integrate_CSJ_characters  integrate_SIDB_characters  table_to_tree
ext_src/: move.ros  tsurgeon_script
ext_src/abc-hs/: package.yaml
ext_src/abc-hs/app/Relabeling/: Main.hs
ext_src/abc-hs/src/: ABCTree.hs  CatPlus.hs  KeyakiCat.hs
tests/ml/: test_gen.py
tests/resources/trees/: test_multiple.psd
tests/resources/trees/ABCTreebank_sample/: misc_1709kytext1-b2psg.psd  misc_1709kytext2-b2psg.psd  misc_1709kytext3-b2psg.psd  misc_BUFFALO-b2psg.psd  misc_CALDECOTT-1878-b2psg.psd  misc_EXAMPLE-b2psg.psd  misc_JSeM_beta_150530-b2psg.psd  misc_KNB-b2psg.psd  misc_TOPTEN-b2psg.psd  misc_description-b2psg.psd  misc_momotaro-b2psg.psd
tests/resources/trees/devised/: test_single.psd
tests/transform_ABC/: test_binconj.py
tests/transform_ABC/core/: sample_ideal.psd  test_binarize_conj_tree.py
tests/transform_Keyaki/core/: sample_ideal_decrypted.psd  sample_ideal_obfuscated.psd  sample_ideal_orig_processed.txt  test_corpus_readers.py  test_obf-decrypt.py
tests/types/: test_ABCCat.py  test_core.py  test_real.py
