[tool.poetry]
name = "abctk"
version = "0.3.1"
description = ""
authors = ["Nori Hayashi <net@hayashi-lin.net>"]
maintainers = ["Nori Hayashi <net@hayashi-lin.net>"]
readme = "README.md"
repository = "https://github.com/ABCTreebank/ABCTreebank"
packages = [
    { include = "abctk" },
    { include = "lit", format = "sdist" }
]

include = ["ext_src/", "ext_scripts/"]
exclude = ["**/docs"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ABCTreebank/ABCT-toolkit/issues"

[tool.poetry.scripts]
abctk = "abctk.cli_typer:app"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
xdg = "^5.1.1"
parsy = "^1.3.0"
numpy = "^1.21.1"
Janome = "0.4.1"
"ruamel.yaml" = "^0.17.10"
dictknife = "^0.13.0"
psutil = "^5.8.0"
tqdm = "^4.62.0"
allennlp = { version = "2.4.0", optional = true }
allennlp-models = { version = "2.4.0", optional = true }
depccg = { version = "2.0.3.2", optional = true }
GitPython = "^3.1.11"
gevent = "^21.8.0"
importlib-metadata = "^3.3.0"
pycuda = { version = "^2021.1", optional = true }
attrs = "^20.3.0"
lxml = "^4.6.2"
fs = "^2.4.12"
humanize = "^3.3.0"
more-itertools = "^8.7.0"
jaconv = "^0.3"
pykakasi = "^2.1.0"
simplejson = "^3.17.3"
Cython = { version = "^0.29.24", optional = true }
typer = "^0.4.0"
jsonlines = "^2.0.0"
packaging = "^21.3"
nltk = "^3.6.5"
PyYAML = "^6.0"
svgling = {git = "https://github.com/rawlins/svgling", rev = "fb254634287fa5a73687a49217eafb718b3cd285"}
abctk-obj = {git = "https://github.com/abctreebank/abctk.obj", rev = "0.3.0"}

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
requests = "^2.25.1"
mypy = "^0.790"
pytest = "^6.2.2"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
ipykernel = "^5.5.0"
pandas = "~1.1"

[tool.poetry.extras]
parser = ["Cython", "allennlp", "allennlp-models", "gevent", "depccg"]
ml = ["Cython", "allennlp", "allennlp-models", "gevent", "pycuda", "depccg"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0", "requests", "xdg", "tqdm"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]